# workmate

./: .gitignore  READme.md  cli_validator.py  main.py  pyproject.toml  reader.py
reports/: average.py  base.py  factory.py
tests/: test_average.py  test_factory.py  test_row.py
